# CommonScript

./: .gitignore  README.md  git_cheat_sheet.txt  install.sh
assembly/: float.md  readme.md  statck.md
assembly/gnu/: inline_assembly.md  readme.md
assembly/nasm/: Makefile  hello.asm  nasm.md  nasm.sh  reverse.asm  stack.asm  sum.asm
cpp/: bugs.txt  cleanup.sh  easy.forget.cpp  namespace.candidate
cpp/algorithm/: algorithm.cpp  move_data.cpp  permutation.cpp  remove_while_iter_list.cpp  sort_multiply_fields.cpp
cpp/app/: gdb.cpp
cpp/boost/: install.txt
cpp/concurrent/: thread.cpp  time.cpp
cpp/core/: alias.cpp  namespace.cpp  overload_resolution.cpp  undefined_behaviour.cpp  uniform_initialization.cpp  user_defined_literal.cpp
cpp/design/: callback_idiom.cpp  type_erased_idiom.cpp
cpp/design/global_var/: CMakeLists.txt  FactoryObject.cpp  FactoryObject.h  main.cpp  shared1.cpp  shared2.cpp
cpp/exception/: exception.cpp  exception_ptr.cpp  initilization_exception.cpp  no_enough_momory.cpp
cpp/functional/: bind.cpp  lambda.cpp
cpp/gcc/: address_sanitizer.cpp  attribute_packed.cpp  attribute_restrict.cpp  gcc.sh  thread_sanitizer.cpp
cpp/keyword/: cast.cpp  constexpr.cpp  enum.cpp  mutable.cpp
cpp/lib/arrow/: CMakeLists.txt  install.sh
cpp/lib/arrow/src/: CMakeLists.txt  array.cpp  buffer.cpp  ds_demo.cpp  feather.cpp  parquet_demo.cpp  read_table.cpp
cpp/lib/arrow/src1/: parquet_reader.cpp
cpp/lib/conan_cmake/: CMakeLists.txt  conanfile.txt  main.cpp  run.sh
cpp/linux/: execution.model.txt  getopt.cpp  getopt_long.cpp  system_call.txt
cpp/misc/: debug_windows.cpp
cpp/network/: comparision.txt  epoll_example.cpp  network_option.txt  pcap.cpp  pcap_tcp_t2t.cpp  tcp_sink.cpp  udp.txt
cpp/oo/: friend.cpp  operation_overload.cpp  scope.cpp  virtual_functions.cpp
cpp/performance/: readme.md
cpp/problem/: LongestIncreasingPath.cpp  match.cpp
cpp/std_c/: rdtsc.cpp
cpp/stl/: algorithm.cpp  map.cpp  pair.cpp  set.cpp  stack.cpp  string.cpp  tuple.cpp  vector.cpp
cpp/template/: default_template_type.cpp  meta_programming.cpp  specialization.cpp  trait_idiom.cpp  traits.cpp  variadic_template.cpp
cpp/windows/: unicode.cpp  version.cpp
db/algorithm/: TwoPhaseMultiwayMergeSort.cpp
db/db2/: GET_DYNAMIC_SEARCH_RESULTS.sql  LockCobAndResource.sql  compare_two_tables.sql  crud.sql  ddl.sql  error.sql  new_version.sproc.sql  performance_tune.sql  select.sql
db/mongodb/: MongoDB.cheatsheet.js  mongo.cmd  mongod.cfg
db/mysql/: admin.sql  auth.sh  crud.sql  data_2_load.txt  data_types.sql  ddl.sql  linux.sh  new_version.sql  security.sql  select.sql  select_builtin_functions.sql
db/redis/: cmds.txt
finance/: symbol.convention.txt  syncup.jiaqi.txt
front_end/: chrome_cmd.txt  css_selector.txt  xpath.txt
front_end/extjs/: action_column.css  action_column.js  helper.js  icon_cmp_with_tooltip.js  summary_grid.js
front_end/nodejs/: cmd.txt
java/: bugs.txt
java/code/: cmp.java  jackson_convertor.java  jdbc.java  timing.java  utility.java
java/config/: env.sh  gc.txt
linux/: .bashrc  .vimrc  cmd.txt  debug.cmd  find_stuff.sh  pack.sh  ubuntu.txt  vim.txt
linux/AnalyzeText/: cat_tac.sh  cut.sh  diff.sh  display.sh  ed.sh  head_tail.sh  merge.sh  more_less.sh  nice_output.sh  regular_expression.sh  sed.sh  sort.sh  unique.sh  wc.sh
linux/Edit/: translate.sh
linux/FileManagement/: archive.sh  copy.sh  file_crud.sh  find.sh  make_dir.sh  navigation.sh  rsync.sh  trouble_shooting_tools.sh
linux/ShellScript/: arguments.sh  case.sh  control_flow.sh  execution.txt  function.sh  hello.sh  option.sh  string.sh  user_input.sh  variable.sh
linux/administration/: impersonate.sh  machine_life_management.sh  option.sh  run_level.sh  services.sh  ulimit.sh
linux/config/: .atom.config  .bashrc  .clang-format  .inputrc  .perltidyrc  .tmux.conf  .uncrustify  .vimrc  config.link  crontab  functions.sh  install_config.sh  read_config.sh  yapf.style
linux/core/: alias.sh  background.sh  compose_group.sh  function.sh  option.sh  pipeline.sh  quoting.sh  redirection_pipeline.sh  trick.sh  variable.sh  wildcard.sh  xargs.sh
linux/debug/: memory.sh
linux/dev/compile/cmake/: CMakeLists.txt  cmake.sh  general.md  hello.cpp  main.cpp  math.cpp  math.h  modern_cmake.md  overview.md
linux/interrogation/: GUI_monitor.txt  (+6 more)
misc/: chicken_soup.txt  law.txt  life_quality.txt  literature.txt  markdown_example.md  philosophy.txt
perl/: main.pl  overview.txt
python/: ConfigParser.py  any.py  decorator.py  dict.py  io.py  iterator.py  list.py  producer_consumer.py  thread_pool.py
python3/: ConfigParser.conf  anaconda.sh  p2_vs_p3.py  venv.sh
rust_learn/: Cargo.toml
windows/: cmd.txt  dns.sh  network.sh  using_skills.txt
(+1750 files in other folders)
